--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^3.0.0",
-    "lenis": "^1.3.17"
+    "lenis": "^1.3.17",
+    "luxon": "^3.7.2",
+    "markdown-it": "^14.1.1"
   },
   "devDependencies": {
     "rimraf": "^6.1.2"
