--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "scripts": {
-    "prebuild": "rimraf _site",
+    "scripts": {
+    "prebuild": "node -e \"require('fs').rmSync('_site',{recursive:true,force:true})\"",
     "build": "eleventy",
     "dev": "eleventy --serve"
-  },
+    },
   "dependencies": {
     "@11ty/eleventy": "^3.0.0",
     "lenis": "^1.3.17",
